Added more features to C++ code to detect the files deleted from the source directory, and make an entry to database. Also added date based search logic on the web part.
The branch can now be merged to main branch and can be delete to keep the repo clean

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,3 +46,7 @@ target_link_libraries(Test_Integrity_Check Dqm)
 
 add_executable(TestFileExist test/TestFileExist.cpp)
 target_compile_features(TestFileExist PRIVATE cxx_std_17)
+
+add_executable(Test_Update_Db_For_Deleted_Files test/Test_Update_Db_For_Deleted_Files.cpp)
+target_link_libraries(Test_Update_Db_For_Deleted_Files Dqm)
+
