--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,16 +6,27 @@ SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})
 
 enable_language(CXX)
 
+message(STATUS ${CMAKE_CXX_COMPILER_ID})
+message(STATUS ${CMAKE_CXX_COMPILER_VERSION})
+
 #Added to detect compiler support for C++11
 include(CheckCXXCompilerFlag)
-CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
-CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
-if(COMPILER_SUPPORTS_CXX11)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-elseif(COMPILER_SUPPORTS_CXX0X)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
+CHECK_CXX_COMPILER_FLAG("-std=c++17" COMPILER_SUPPORTS_CXX17)
+CHECK_CXX_COMPILER_FLAG("-std=c++14" COMPILER_SUPPORTS_CXX14)
+if(COMPILER_SUPPORTS_CXX17)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
+elseif(COMPILER_SUPPORTS_CXX14)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
+    add_definitions(-DEXPERIMENTAL_FILESYSTEM)
+    message(STATUS "Going to use experimental filesystem. Its recommended to switch to upgraded compile with c++17 support.")
 else()
-    message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
+    message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++14 or C++17 support. Please use a different C++ compiler.")
+endif()
+
+if(CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 8.0)
+else()
+message(STATUS "@@@@@@ Adding EXPERIMENTAL_FILELSYSTEm Macro @@@@@@")
+add_definitions(-DEXPERIMENTAL_FILESYSTEM)
 endif()
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR}/cmake/modules)
@@ -27,8 +38,12 @@ message(STATUS "mysql inc : ${MYSQL_INCLUDE_DIR}")
 include_directories(inc)
 
 add_library(Dqm SHARED src/Database.cpp)
+if(CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 8.0)
 target_link_libraries(Dqm ${MYSQL_LIBRARIES}) 
 target_compile_features(Dqm PRIVATE cxx_std_17)
+else()
+target_link_libraries(Dqm ${MYSQL_LIBRARIES} stdc++fs) 
+endif()
 
 add_executable(TestMysql test/TestMysql.cpp)
 target_link_libraries(TestMysql Dqm)
@@ -55,9 +70,11 @@ target_link_libraries(Test_Update_Db_For_Cron_Offline Dqm)
 
 #Core c++ test
 add_executable(TestFileExist test/core/TestFileExist.cpp)
-target_compile_features(TestFileExist PRIVATE cxx_std_17)
+target_link_libraries(TestFileExist Dqm) #stdc++fs)
+#target_compile_features(TestFileExist PRIVATE cxx_std_17)
 
 add_executable(Test_List_Files_In_Directory test/core/Test_List_Files_In_Directory.cpp)
-target_compile_features(Test_List_Files_In_Directory PRIVATE cxx_std_17)
+target_link_libraries(Test_List_Files_In_Directory Dqm)
+#target_compile_features(Test_List_Files_In_Directory PRIVATE cxx_std_17)
 #target_link_libraries(Test_List_Files_In_Directory Dqm)
 
