Renamed Helpers.h to Helpers_Dqm.h, This is done so that the code can be used as external library.
Other code like ISMRAN_Data_Analysis can include, link  and use
this external library with CMake. Because there is another Helpers.h
sitting in ISMRAN_Data_Analysis, which was previously clashing with
this Dqm. The renamed file avoid this clash, and now the libDqm can
be easily linked.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,7 @@ include_directories(${MYSQL_INCLUDE_DIR})
 message(STATUS "mysql inc : ${MYSQL_INCLUDE_DIR}")
 include_directories(inc)
 
-add_library(Dqm SHARED src/Database.cpp src/Helpers.cpp)
+add_library(Dqm SHARED src/Database.cpp src/Helpers_Dqm.cpp)
 if(CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 8.0)
 target_link_libraries(Dqm ${MYSQL_LIBRARIES}) 
 target_compile_features(Dqm PRIVATE cxx_std_17)
